# solo

./: .gitignore  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  package-lock.json  package.json
.github/workflows/: ci.yml
api/: README.md  jest.ci.config.js  monolith-entry.js  package-lock.json  package.json
api/autocheck/: README.md  checker.js
api/autonomous/: README.md
api/router/: GUIDE.md  README.md  config.js  index.js  package.json
api/sample/: GUIDE.md  README.md  config.js  index.js  package.json
client/desktop/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
client/desktop/src-tauri/: Cargo.toml  tauri.conf.json
client/desktop/src-tauri/icons/: icon.icns
client/desktop/src-tauri/src/: main.rs
client/mobile/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
deploy/: README.md  bot-permits.js  build-frontend.sh  build.sh  check-doc-drift.js  check-error-codes.js  dashboard_all.sh  dashboard_dev.sh  dashboard_run.sh  dev.sh  gen-entry.js  local-oss.js  mock.sh  precheck.sh  redis.prod.conf  release-bundle.sh  seed-bots.js  seed-registry.js  services.dev.json  services.json
deploy/mock/: README.md  bootstrap.js  e2e.js  inject-fulfillment.js  inject-workflows.js  keys.env.example  listener.js  simulate.js  start.sh
deploy/scaffold/: .env.example  .gitignore  README.client.md  README.md  (+10 more)
docs/: README.md
e2e/: .gitignore  README.md  jest.config.js  jest.unit.config.js  package-lock.json  package.json
portal/: README.md
(+1019 files in other folders)
